# ROS2-Zed-Aruco-Lib

src/locomotion_core/locomotion_core/: cmd_roboteq_jetson.py
src/zed_aruco/: CMakeLists.txt  package.xml
src/zed_aruco/include/zed_aruco/: aruco.hpp  utils.hpp
src/zed_aruco/msg/: ArucoPose.msg  ArucoPoseArray.msg  Ori.msg  Quat.msg
src/zed_aruco/src/: Aruco_Processor.cpp  Aruco_Processor_Ears.cpp  Motor_Driver.cpp  Zed_Aruco.cpp  aruco.cpp
